--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,7 +7,7 @@
       <meta name="theme-color" content="#000000" />
       <meta
          name="description"
-         content="Chat application, made for fun, Programming is fun"
+         content="MideChat, made for fun, Programming is fun"
       />
       <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
