--- a/client/public/index.html
+++ b/client/public/index.html
@@ -13,7 +13,7 @@
 
       <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-      <title>Chatty App</title>
+      <title>MideChat App</title>
       <link rel="preconnect" href="https://fonts.googleapis.com" />
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
       <link
